--- a/bitbot.cfg
+++ b/bitbot.cfg
@@ -1,5 +1,22 @@
-[Trader]
-MinEarningsPerShare: 10
+[BitBot]
+StartCash: 1000.00
+
+[HighLowTrader]
 PriceEquivalencyThreshold: 0.1
-trendthreshold: 0.05
-trendcountthreshold: 2
+MinEarningsPerShare: 10
+
+[StopLossTrader]
+PriceEquivalencyThreshold: 0.1
+TrendCountThreshold: 2
+
+[LinearDataSource]
+StartPrice: 420.00
+GrowthRate: 1.0
+QueryRate: 1
+
+[BounceDataSource]
+StartPrice: 420.00
+MinPrice: 300.00
+MaxPrice: 500.00
+GrowthRate: 1.0
+QueryRate: 1.0
