--- a/bitbot.cfg
+++ b/bitbot.cfg
@@ -1,5 +1,12 @@
 [BitBot]
+SelectedTrader: StopLossTrader
+SelectedDataSource: BitstampDataSource
+
+[BitWallet]
 StartCash: 1000.00
+
+[Trader]
+SelectedTrader: StopLossTrader
 
 [HighLowTrader]
 PriceEquivalencyThreshold: 0.1
@@ -19,4 +26,12 @@ StartPrice: 420.00
 MinPrice: 300.00
 MaxPrice: 500.00
 GrowthRate: 1.0
-QueryRate: 1.0
+QueryRate: 1
+
+[RandomBounceDataSource]
+RandomThreshold: 0.2
+StartPrice: 420.00
+MinPrice: 300.00
+MaxPrice: 500.00
+GrowthRate: 1.0
+QueryRate: 1
